Fixed alignment in CSS

--- a/styles.css
+++ b/styles.css
@@ -12,11 +12,11 @@
     margin-left: 15px;
     margin-right: 15px;
     width: 40%;
-    min-height: 40%;
+    min-height: 50%;
     max-height: auto;
     position: absolute;
     left: 50%;
-    transform: translate(-50%, -160%);
+    transform: translate(-50%, -150%);
     background: white;
     display: flex;
     flex-direction: column;
@@ -78,8 +78,18 @@ body {
     background-image: url(images/icon-plus.svg);
     width: 30px;
     height: 30px;
+    grid-column-start: 2;
+    grid-column-end: 3;
 }
 
-.q-and-a {
+.question {
     display: grid;
+    grid-template-columns: 93% 7%;
+    grid-template-rows: 1fr;
+    align-items: flex-start;
+}
+
+br {
+    color: lightgray;
+    stroke-width: 12%;
 }
